# AI_message

./: pyproject.toml
ai_message/: main.py
app/: .env.example  main.py
